# arm-agent-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  real-arm64-smoke.yml
configs/: conservative-search-space.yaml  default-quality-policy.yaml  default-screening-scenarios.yaml  default-search-space.yaml  strict-quality-policy.yaml
docs/: architecture.md  arm-optimization.md  baseline-methodology.md  benchmark-methodology.md  demo-script.md  devpost-submission.md  evaluation-methodology.md  final-report.md  github-actions-arm64-validation.md  judging-map.md  limitations.md  optimization-passport.md  quality-policy.md  real-arm-validation-runbook.md  release-readiness.md  runtime-safety.md  screening-methodology.md  search-planning.md  security.md  workload-format.md
docs/screenshots/: README.md  captions.md
scripts/: build-llama-arm64.sh  validate-release.sh
src/aarchtune/: __init__.py  cli.py  errors.py  logging_config.py  models.py
tests/unit/: conftest.py  test_baseline_artifacts.py  test_baseline_cli.py  test_baseline_runner.py  test_benchmark_aggregation.py  test_benchmark_normalization.py  test_benchmark_statistics.py  test_candidate_generation.py  test_cli.py  test_detector.py  test_discovery.py  test_evaluation.py  test_evaluation_policy_ranking.py  test_evaluation_provenance_plan.py  test_evaluation_runner_cli.py  test_features.py  test_finalization_product.py  test_json_path.py  test_kleidiai_evidence.py  test_orchestration_product.py  test_plan_artifacts_cli.py  (+19 more)
workloads/: reliability-agent.jsonl  smoke-test.jsonl
(+134 files in other folders)
