[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aarchtune"
version = "0.1.0"
description = "Workload-aware, quality-constrained llama.cpp autotuning for Linux Arm64"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "AArchTune contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "psutil>=5.9,<8",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.2,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
  "types-psutil>=5.9",
  "types-PyYAML>=6.0",
  "types-jsonschema>=4.23",
]

[project.scripts]
aarchtune = "aarchtune.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aarchtune"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=aarchtune --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["aarchtune"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["aarchtune"]
warn_unreachable = true
